--- a/Hubo.Web/packages.config
+++ b/Hubo.Web/packages.config
@@ -61,9 +61,10 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.8.3" targetFramework="net452" />
   <package id="Moment.js" version="2.11.1" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="Nito.AsyncEx" version="3.0.1" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
+  <package id="StyleCop.Analyzers" version="1.1.0-beta001" targetFramework="net452" developmentDependency="true" />
   <package id="System.Collections.Immutable" version="1.1.36" targetFramework="net452" />
   <package id="toastr" version="2.1.1" targetFramework="net452" />
   <package id="WebGrease" version="1.6.0" targetFramework="net452" />
