--- a/Hubo.WebApi/Hubo.WebApi.csproj
+++ b/Hubo.WebApi/Hubo.WebApi.csproj
@@ -120,6 +120,7 @@
     </Reference>
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -137,6 +138,7 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Microsoft.AspNet.WebApi.WebHost.5.2.3\lib\net45\System.Web.Http.WebHost.dll</HintPath>
     </Reference>
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -146,6 +148,7 @@
   <ItemGroup>
     <Compile Include="Api\Controllers\BreakController.cs" />
     <Compile Include="Api\Controllers\CompanyController.cs" />
+    <Compile Include="Api\Controllers\DayShiftController.cs" />
     <Compile Include="Api\Controllers\DrivingShiftController.cs" />
     <Compile Include="Api\Controllers\NoteController.cs" />
     <Compile Include="Api\Controllers\RegistrationController.cs" />
@@ -156,6 +159,7 @@
     <Compile Include="Api\Models\DriverDetailsResponseModel.cs" />
     <Compile Include="Api\Models\LoginModel.cs" />
     <Compile Include="Api\Models\LoginResponse.cs" />
+    <Compile Include="Api\Models\StartShiftRequestModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -175,6 +179,11 @@
       <Project>{3979f157-deb0-4878-ab1d-4cef6b5a1300}</Project>
       <Name>Hubo.EntityFramework</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Analyzer Include="..\packages\StyleCop.Analyzers.1.1.0-beta001\analyzers\dotnet\cs\Newtonsoft.Json.dll" />
+    <Analyzer Include="..\packages\StyleCop.Analyzers.1.1.0-beta001\analyzers\dotnet\cs\StyleCop.Analyzers.CodeFixes.dll" />
+    <Analyzer Include="..\packages\StyleCop.Analyzers.1.1.0-beta001\analyzers\dotnet\cs\StyleCop.Analyzers.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
