--- a/Hubo.Application/packages.config
+++ b/Hubo.Application/packages.config
@@ -9,6 +9,8 @@
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net452" />
   <package id="CsvHelper" version="3.0.0-beta7" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="HtmlRenderer.Core" version="1.5.1-beta1" targetFramework="net452" />
+  <package id="HtmlRenderer.PdfSharp" version="1.5.1-beta1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNetCore.Http.Abstractions" version="1.1.0" targetFramework="net452" />
@@ -20,7 +22,7 @@
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net452" />
   <package id="Nito.AsyncEx" version="3.0.1" targetFramework="net452" />
   <package id="NPOI" version="2.2.1" targetFramework="net452" />
-  <package id="PDFsharp" version="1.32.3057.0" targetFramework="net452" />
+  <package id="PDFsharp" version="1.50.4000-beta3b" targetFramework="net452" />
   <package id="Sendgrid" version="6.3.4" targetFramework="net452" />
   <package id="SendGrid.CSharp.HTTP.Client" version="3.0.0" targetFramework="net452" />
   <package id="SendGrid.SmtpApi" version="1.3.1" targetFramework="net452" />
