--- a/Hubo.Core/packages.config
+++ b/Hubo.Core/packages.config
@@ -6,9 +6,12 @@
   <package id="Castle.LoggingFacility" version="3.3.0" targetFramework="net452" />
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="HtmlRenderer.Core" version="1.5.1-beta1" targetFramework="net452" />
+  <package id="HtmlRenderer.PdfSharp" version="1.5.1-beta1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net452" />
   <package id="Nito.AsyncEx" version="3.0.1" targetFramework="net452" />
+  <package id="PDFsharp" version="1.50.4000-beta3b" targetFramework="net452" />
   <package id="StyleCop.Analyzers" version="1.1.0-beta001" targetFramework="net452" developmentDependency="true" />
   <package id="System.Collections.Immutable" version="1.1.36" targetFramework="net452" />
 </packages>
