--- a/Hubo.Web/packages.config
+++ b/Hubo.Web/packages.config
@@ -29,6 +29,8 @@
   <package id="FontAwesome" version="4.4.0" targetFramework="net452" />
   <package id="Hangfire.Core" version="1.5.6" targetFramework="net452" />
   <package id="Hangfire.SqlServer" version="1.5.6" targetFramework="net452" />
+  <package id="HtmlRenderer.Core" version="1.5.1-beta1" targetFramework="net452" />
+  <package id="HtmlRenderer.PdfSharp" version="1.5.1-beta1" targetFramework="net452" />
   <package id="jQuery" version="2.2.0" targetFramework="net452" />
   <package id="jQuery.BlockUI" version="2.70" targetFramework="net452" />
   <package id="jQuery.UI.Combined" version="1.11.4" targetFramework="net452" />
@@ -64,6 +66,7 @@
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="Nito.AsyncEx" version="3.0.1" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
+  <package id="PDFsharp" version="1.50.4000-beta3b" targetFramework="net452" />
   <package id="StyleCop.Analyzers" version="1.1.0-beta001" targetFramework="net452" developmentDependency="true" />
   <package id="System.Collections.Immutable" version="1.1.36" targetFramework="net452" />
   <package id="toastr" version="2.1.1" targetFramework="net452" />
