--- a/Tests/Hubo.Tests/packages.config
+++ b/Tests/Hubo.Tests/packages.config
@@ -13,11 +13,14 @@
   <package id="Effort.EF6" version="1.1.5" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="EntityFramework.DynamicFilters" version="1.4.10.2" targetFramework="net452" />
+  <package id="HtmlRenderer.Core" version="1.5.1-beta1" targetFramework="net452" />
+  <package id="HtmlRenderer.PdfSharp" version="1.5.1-beta1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net452" />
   <package id="Nito.AsyncEx" version="3.0.1" targetFramework="net452" />
   <package id="NMemory" version="1.1.2" targetFramework="net452" />
   <package id="NSubstitute" version="1.10.0.0" targetFramework="net452" />
+  <package id="PDFsharp" version="1.50.4000-beta3b" targetFramework="net452" />
   <package id="Shouldly" version="2.7.0" targetFramework="net452" />
   <package id="System.Collections.Immutable" version="1.1.36" targetFramework="net452" />
   <package id="xunit" version="2.1.0" targetFramework="net452" />
