Major changes, more to come

--- a/Hubo.WebApi/Hubo.WebApi.csproj
+++ b/Hubo.WebApi/Hubo.WebApi.csproj
@@ -168,6 +168,7 @@
     <Compile Include="Api\Controllers\VehiclesController.cs" />
     <Compile Include="Api\HuboWebApiModule.cs" />
     <Compile Include="Api\Controllers\AccountController.cs" />
+    <Compile Include="Api\Models\DayShiftResponseModel.cs" />
     <Compile Include="Api\Models\DriverDetailsResponseModel.cs" />
     <Compile Include="Api\Models\LoginModel.cs" />
     <Compile Include="Api\Models\LoginResponse.cs" />
